--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "i18next": "^20.3.2",
     "immer": "^9.0.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
