--- a/package.json
+++ b/package.json
@@ -1,44 +1,43 @@
 {
-  "name": "forms-toturial",
-  "version": "0.1.0",
-  "private": true,
+  "name": "magazin-client",
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "i18next": "^20.3.2",
     "immer": "^9.0.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.1",
     "react-minimalist-toolbar": "^1.0.6",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "redux": "^4.1.0",
     "web-vitals": "^0.2.4"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SariAzulay/magazin-client.git"
   },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/SariAzulay/magazin-client/issues"
+  },
+  "homepage": ".",
   "browserslist": {
     "production": [
       ">0.2%",
